--- a/ansible-playbook.yml
+++ b/ansible-playbook.yml
@@ -7,7 +7,7 @@
     command : sudo apt-get update
 
   - name : Install Docker
-    command : sudo apt-get install -y docker.io
+    command : apt-get install -y docker.io
 
   - name : Start Docker Service
     command : sudo systemctl start docker
